--- a/package.json
+++ b/package.json
@@ -33,11 +33,14 @@
     "gulp-streamify": "0.0.5",
     "gulp-uglify": "^1.0.2",
     "gulp-util": "^3.0.2",
+    "gulp-watch": "^3.0.0",
+    "lodash": "^2.4.1",
     "merge-stream": "^0.1.6",
     "path": "^0.11.14",
     "through2": "^0.6.3",
     "vinyl-source-stream": "^1.0.0",
-    "watchify": "^2.2.1"
+    "watchify": "^2.2.1",
+    "yargs": "^1.3.3"
   },
   "dependencies": {
     "lodash": "^2.4.1"
